--- a/src/BasicUserRepository.Api/BasicUserRepository.Api.csproj
+++ b/src/BasicUserRepository.Api/BasicUserRepository.Api.csproj
@@ -6,8 +6,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.32" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.6" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.18" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.7.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BasicUserRepository.Core\BasicUserRepository.Core.csproj" />
+    <ProjectReference Include="..\BasicUserRepository.Infrastructure\BasicUserRepository.Infrastructure.csproj" />
   </ItemGroup>
 
 
