--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,9 @@ services:
     container_name: users-repository
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: src/BasicUserRepository.Api/Dockerfile
     ports:
-      - "80:80"
+      - "5000:80"
     networks:
       - users-repository-dev
     depends_on:
@@ -19,7 +19,7 @@ services:
     image: postgres:latest
     environment:
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: 123
+      POSTGRES_PASSWORD: 123456
       POSTGRES_DB: users-db
     ports:
       - "5432:5432"
