--- a/src/BasicUserRepository.Api/appsettings.json
+++ b/src/BasicUserRepository.Api/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Db": "Server=postgres_db;Port=5432;User id=postgres;password=123456;database=users-db"
+  }
 }
