Rewrited some methods to use mediatr

--- a/.gitignore
+++ b/.gitignore
@@ -373,6 +373,9 @@ MigrationBackup/
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
 
+#Idea
+.idea/
+
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 
