--- a/src/BasicUserRepository.Core/BasicUserRepository.Core.csproj
+++ b/src/BasicUserRepository.Core/BasicUserRepository.Core.csproj
@@ -4,4 +4,13 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
+    <PackageReference Include="MediatR" Version="9.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BasicUserRepository.Infrastructure\BasicUserRepository.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
