--- a/tests/BasicUserRepository.Tests/BasicUserRepository.Tests.csproj
+++ b/tests/BasicUserRepository.Tests/BasicUserRepository.Tests.csproj
@@ -6,10 +6,16 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0"/>
-        <PackageReference Include="xunit" Version="2.4.0"/>
-        <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0"/>
-        <PackageReference Include="coverlet.collector" Version="1.0.1"/>
+        <PackageReference Include="MediatR" Version="9.0.0" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
+        <PackageReference Include="Moq" Version="4.20.70" />
+        <PackageReference Include="xunit" Version="2.4.0" />
+        <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
+        <PackageReference Include="coverlet.collector" Version="1.0.1" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\..\src\BasicUserRepository.Api\BasicUserRepository.Api.csproj" />
     </ItemGroup>
 
 </Project>
